--- a/.gitignore
+++ b/.gitignore
@@ -8,16 +8,29 @@
 # testing
 /coverage
 
+#firebase
+/.firebase
+firebase.json
+.firebaserc
+firebase.js
+
 # production
 /build
+
+config.dev.json
 
 # misc
 .DS_Store
 .env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
 
+*.dev.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea
