--- a/react-client/package.json
+++ b/react-client/package.json
@@ -16,7 +16,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
-    "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +41,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.21.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.8"
   }
 }
