--- a/react-client/package.json
+++ b/react-client/package.json
@@ -6,18 +6,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "firebase": "^9.9.1",
     "nanoid": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.1",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.7",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.6",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.21.0",
+    "eslint": "^8.20.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
