--- a/react-client/package.json
+++ b/react-client/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.5.2",
     "react-toastify": "^9.0.6",
     "web-vitals": "^2.1.2"
   },
